--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "www/index.html",
   "icons": [
     {
-      "src": "www/img/logo_128x128.png",
+      "src": "published material/logo_128x128.png",
       "sizes": "128x128",
       "type": "image/png",
       "density": "4.0"
